# contender-WIP

./: .gitignore  CMakeLists.txt  README.md
app/: contender.cpp  sqlitetest.cpp
include/contender/: contact.hpp
source/: contender.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  contact.cpp  contact.hpp  sqlitewrapper.cpp  sqlitewrapper.hpp
